vlib/v/checker/tests/cannot_cast_to_alias.vv
module main

type MyType = string

fn main() {
	_ := MyType(5)
}
